--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --text-color: white;
+  --text-color: pink;
   --bg-url:url(./assets/assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.5);
@@ -24,14 +24,17 @@
 }
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
+  padding: 24px;
 }
 /*profile*/
 
@@ -57,14 +60,14 @@ body * {
   margin: 4px auto;
 }
 #swicth {
-  border: 1px solid red;
+  
   position: relative;
   width: 64px;
 }
 #switch button {
   width: 32px;
   height: 32px;
-  background: white var(--switch-bg-url) no-repeat center ;
+  background: pink var(--switch-bg-url) no-repeat center ;
   border: 0;
   border-radius: 50%;
 
@@ -73,10 +76,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 .light #switch button {
-  right: 0;
-   left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+
+  outline: 8px solid var(--higlight-color);
 }
 
 #switch span {
@@ -151,3 +160,39 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+/*media queries */
+@media (min-width:700px) {
+
+  :root {
+    --bg-url: url(.//assets/assets/bg-desktop.jpg);
+  }
+   
+  .light{
+    --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+
+  from {
+    left: 0;}
+  to {
+    left: 50%;
+  }
+  }
+
+@keyframes slide-back {
+
+  from {
+    left: 50%}
+  
+  to {
+
+    left: 0;
+   }
+
+    
+  }
