--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@
   --text-color: pink;
   --bg-url: url(./assets/assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
-  --surface-color: rgba(255, 255, 255, 0.5);
-  --surface-color-hover: rgba(0, 0, 0, 0.2);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --higlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assets/assets/sun.svg);
+  --switch-bg-url:url(./assets/assets/moon-stars.svg);
 }
+
 
 
 
@@ -22,10 +23,10 @@
   --text-color: black;
   --bg-url:url(./assets/assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
-  --surface-color: rgba(0, 0, 0, 0.5);
-  --surface-color-hover: rgba(0, 0, 0, 0.2);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --higlight-color: rgba(0, 0, 0, 0.1);
-  --switch-bg-url:url(./assets/assets/moon-stars.svg);
+  --switch-bg-url:url(./assets/assets/sun.svg)
 }
 
 
@@ -33,7 +34,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
-  height: 100vh;
+  
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -135,11 +136,11 @@ ul li a {
   text-decoration: none;
   font-weight:500;
 
-  transition: background 0,2;
+  transition: background 0,2s;
 }
 /* pseudo-selector */
 ul li a:hover {
-  background: rgba(255, 255, 255, 0.05);
+  background:var(--surface-color-hover));
   border: 1.5px solid var(--text-color);
 }
 /* social links */
